--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-display: block;
+  font-weight: 700;
+  src: local("Oswald-Regular.ttf"), url(./resources//fonts/Oswald-Regular.ttf);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-display: block;
+  font-weight: 300;
+  src: local("Oswald-ExtraLight.ttf"),
+    url(./resources//fonts/Oswald-ExtraLight.ttf);
 }
