--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,44 @@
-@font-face {
-  font-family: "Oswald";
-  font-style: normal;
-  font-display: block;
-  font-weight: 700;
-  src: local("Oswald-Regular.ttf"), url(./resources//fonts/Oswald-Regular.ttf);
-}
+/* OSWALD */
 @font-face {
   font-family: "Oswald";
   font-style: normal;
   font-display: block;
   font-weight: 300;
-  src: local("Oswald-ExtraLight.ttf"),
-    url(./resources//fonts/Oswald-ExtraLight.ttf);
+  src: local("Oswald-Light"), local("Oswald Light"), local("Oswald"),
+    url(./resources//fonts/Oswald-Light.woff2);
+}
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-display: block;
+  font-weight: 700;
+  src: local("Oswald-Regular"), local("Oswald Regular"), local("Oswald"),
+    url(./resources/fonts/Oswald-Regular.woff2);
+}
+/* CAVIAR DREAMS */
+@font-face {
+  font-family: "Caviar Dreams";
+  font-style: normal;
+  font-display: block;
+  font-weight: 900;
+  src: local("Caviar_Dreams_Bold"), local("CaviarDreams_Bold"),
+    local("Caviar Dreams Bold"), local("CaviarDreams Bold"),
+    url(./resources//fonts/Caviar_Dreams_Bold.woff2);
+}
+@font-face {
+  font-family: "Caviar Dreams";
+  font-style: normal;
+  font-display: block;
+  font-weight: 700;
+  src: local("CaviarDreams"), local("Caviar Dreams"),
+    url(./resources//fonts/CaviarDreams.woff2);
+}
+@font-face {
+  font-family: "Caviar Dreams";
+  font-style: normal;
+  font-display: block;
+  font-weight: 900;
+  src: local("CaviarDreams_BoldItalic"), local("CaviarDreams_Bold_Italic"),
+    local("CaviarDreams Bold Italic"),
+    url(./resources//fonts/CaviarDreams_BoldItalic.woff2);
 }
