--- a/src/components/Chats/Chats.css
+++ b/src/components/Chats/Chats.css
@@ -1,6 +1,5 @@
 @import url("../../App.css");
 
-/* .chatsMain { */
 .chatHeadContainer {
   display: flex;
   align-items: flex-start;
@@ -12,21 +11,29 @@
 }
 
 .chatHeadContainer > div:nth-child(1) {
-    display: flex;
-    flex-direction: column;
-    aspect-ratio: 1/1;
-    /* outline: 1px solid red; */
+  display: flex;
+  flex-direction: column;
+  aspect-ratio: 1/1;
 }
 
 .chatHeadContainer > div:nth-child(2) p {
   margin: 0.25em 0 0 0;
 
+  /* outline: 1px solid red; */
   color: var(--color4);
+}
+
+.profilePic {
+  width: 2rem;
+  margin: 0 1rem 0 0;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
 }
 
 .newMessage {
   display: inline-block;
-  margin-left: 0.25em;
+  margin-left: 0.5em;
   width: 0.5rem;
   background-color: var(--red);
   border-radius: 50%;
@@ -38,13 +45,28 @@
 }
 
 .boldText {
+  padding-right: 0.2em;
   font-weight: var(--bold);
+  color: var(--color6);
 }
 
-.profilePic {
-  width: 2rem;
-  margin: 0 1rem 0 0;
-  border-radius: 50%;
-  aspect-ratio: 1/1;
-  object-fit: cover;
+.blueText {
+  padding-left: 0.2em;
+  color: var(--blue);
+}
+
+.blueText:hover,
+.boldText:hover {
+  cursor: pointer;
+  filter: brightness(1.5);
+}
+
+.msgText {
+  padding: 1em;
+  margin-top: .75em;
+  border: 1px solid var(--color4);
+  border-radius: 3px;
+
+  font-size: var(--smallText);
+  color: var(--color5);
 }
