--- a/src/pages/NotificationPage/NotificationPage.css
+++ b/src/pages/NotificationPage/NotificationPage.css
@@ -46,3 +46,9 @@
   width: 80%;
   align-self: center;
 }
+
+/* @media screen and (min-width: 1440px) {
+  .notificationPageContainer {
+    background-color: blue;
+  }
+} */
